force-app/main/default/objects/Candidate__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>TEXT(FLOOR((TODAY() - Date_of_Birth__c) / 365)) &amp; &quot; years &quot; &amp;
    TEXT(FLOOR(MOD((TODAY() - Date_of_Birth__c), 365) / 30)) &amp; &quot; months &quot; &amp; TEXT(MOD(MOD((TODAY() - Date_of_Birth__c), 365), 30)) &amp; &quot; days&quot;</formula>
    <label>Age</label>
    <type>Text</type>
</CustomField>