force-app/main/default/objects/Candidate__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>TEXT(MONTH( Date_of_Birth__c ))</formula>
    <label>Month</label>
    <type>Text</type>
</CustomField>