force-app/main/default/objects/Candidate__c/fields/Not_Interested__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Interested</label>
    <type>Checkbox</type>
</CustomField>