force-app/main/default/objects/Candidate__c/validationRules/DOBCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>DOBCheck</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c &gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of birth can,t be higher than today</errorMessage>
</ValidationRule>